--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "progressive-tests",
+  "name": "evoneering",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +10,12 @@
     "@types/node": "11.9.3",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "apollo-boost": "^0.3.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
+    "graphql": "^14.1.1",
     "react": "^16.8.1",
+    "react-apollo": "^2.5.2",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.5",
     "react-test-renderer": "^16.8.1",
