--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/enzyme": "^3.1.17",
-    "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/jest": "24.0.3",
-    "@types/mkdirp": "^0.5.2",
-    "@types/node": "11.9.3",
-    "@types/react": "16.8.2",
-    "@types/react-dom": "16.8.0",
     "apollo-boost": "^0.3.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
@@ -17,7 +10,11 @@
     "react": "^16.8.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-apollo": "^2.5.2",
+    "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.1",
+    "react-grid-gallery": "^0.5.5",
+    "react-image-gallery": "^0.8.18",
+    "react-markdown": "^4.1.0",
     "react-scripts": "2.1.5",
     "react-scrollable-anchor": "^0.6.1",
     "react-test-renderer": "^16.8.1",
@@ -45,7 +42,15 @@
     "globalTeardown": "<rootDir>/jest/setupTests.globalTeardown"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.17",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/jest": "24.0.3",
+    "@types/mkdirp": "^0.5.2",
+    "@types/node": "11.9.3",
     "@types/puppeteer": "^1.12.1",
+    "@types/react": "16.8.2",
+    "@types/react-burger-menu": "^2.2.5",
+    "@types/react-dom": "16.8.0",
     "@types/react-scrollable-anchor": "^0.6.0",
     "jest-allure": "^0.1.1",
     "jest-allure-image-snapshot": "0.0.10",
