--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-grid-gallery": "^0.5.5",
     "react-image-gallery": "^0.8.18",
     "react-markdown": "^4.1.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.5",
     "react-scrollable-anchor": "^0.6.1",
     "react-test-renderer": "^16.8.1",
@@ -51,6 +53,8 @@
     "@types/react": "16.8.2",
     "@types/react-burger-menu": "^2.2.5",
     "@types/react-dom": "16.8.0",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
     "@types/react-scrollable-anchor": "^0.6.0",
     "jest-allure": "^0.1.1",
     "jest-allure-image-snapshot": "0.0.10",
